We're nearly there!

--- a/allreferences.bib
+++ b/allreferences.bib
@@ -2129,3 +2129,15 @@
   year={1999},
   publisher={Cambridge, MA}
 }
+
+
+@InProceedings{locatello2020weakly,
+  title = 	 {Weakly-Supervised Disentanglement Without Compromises},
+  author =       {Locatello, Francesco and Poole, Ben and Raetsch, Gunnar and Sch{\"o}lkopf, Bernhard and Bachem, Olivier and Tschannen, Michael},
+  booktitle     = {International Conference on Machine Learning (ICML)},
+  pages = 	 {6348--6359},
+  series        = {Proceedings of Machine Learning Research},
+  year = 	 {2020},
+  volume = 	 {119},
+  month = 	 {7},
+}
