--- a/main.tex
+++ b/main.tex
@@ -454,10 +454,14 @@ titlepage,numbers=noenddot,%1headlines,
 % ************************************
 % only compile a part of the document
 % ************************************
+% \includeonly{FrontBackmatter/Contents}
 % \includeonly{ch/1-introduction}
 % \includeonly{ch/2-related-work}
-% \includeonly{ch/3-structure}
-\includeonly{ch/7-discussion}
+\includeonly{ch/3-structure}
+% \includeonly{paper1/paper1}
+% \includeonly{paper2/paper2}
+% \includeonly{paper3/paper3}
+% \includeonly{ch/7-discussion}
 
 
 % ********************************************************************
