Just two items left!

--- a/allreferences.bib
+++ b/allreferences.bib
@@ -1103,11 +1103,9 @@
   year          = {2020}
 }
 
-@InProceedings{   kehrenberg2020zeroshot,
+@Unpublished{   kehrenberg2020zeroshot,
   author        = {Kehrenberg, Thomas and Sharmanska, Viktoriia and Bartlett, Myles and
                   Quad\-ri\-an\-to, Novi},
-  booktitle     = {Submitted to ICML},
-  note          = {Under review},
   title         = {Learning with Perfect Bags: Addressing Hidden Stratification with Zero Labeled
                   Data},
   year          = {2021}
