--- a/math_commands.tex
+++ b/math_commands.tex
@@ -31,6 +31,10 @@
 \def\twosecrefs#1#2{sections \ref{#1} and \ref{#2}}
 % Reference to three sections.
 \def\secrefs#1#2#3{sections \ref{#1}, \ref{#2} and \ref{#3}}
+% Appendix reference, lower-case.
+\def\appref#1{appendix~\ref{#1}}
+% Appendix reference, capital.
+\def\Appref#1{Appendix~\ref{#1}}
 % Reference to an equation, lower-case.
 \def\eqref#1{equation~\ref{#1}}
 % Reference to an equation, upper case
