--- a/paper2/appendix.tex
+++ b/paper2/appendix.tex
@@ -118,6 +118,9 @@ CelebA    & 32               & 5      & 1       & $\ell_1$ \\
 \end{tabular}
 \end{table}
 
+\subsection{Instructions for potential users}
+In order to use the presented method,
+
 \subsection{Additional results}\label{sec:additional-results}
 \paragraph{Detailed results for UCI Adult dataset.}
 This census data is commonly used to evaluate models focused on algorithmic fairness.
