--- a/main.tex
+++ b/main.tex
@@ -457,9 +457,9 @@ titlepage,numbers=noenddot,%1headlines,
 % \includeonly{FrontBackmatter/Contents}
 % \includeonly{ch/1-introduction}
 % \includeonly{ch/2-related-work}
-\includeonly{ch/3-structure}
+% \includeonly{ch/3-structure}
 % \includeonly{paper1/paper1}
-% \includeonly{paper2/paper2}
+\includeonly{paper2/paper2}
 % \includeonly{paper3/paper3}
 % \includeonly{ch/7-discussion}
 
