--- a/paper2/appendix.tex
+++ b/paper2/appendix.tex
@@ -119,7 +119,22 @@ CelebA    & 32               & 5      & 1       & $\ell_1$ \\
 \end{table}
 
 \subsection{Instructions for potential users}
-In order to use the presented method,
+The first question a potential user has to ask themselves is
+whether the method is a good fit:
+is the problem that the user faces one of strong spurious correlation
+and is there non-spurious data available that has labels for the spurious variable?
+To investigate the first part of the question,
+the user should first try to train a standard neural network classifier
+and observe the test-set performance.
+Furthermore, one should check
+whether the spurious variable can be removed with data augmentations alone.
+
+to use the cFlow or cVAE variant of the method.
+For initial experiments, we would recommend the cVAE model as it is quicker to train,
+and will lead to shorter feedback cycles when validating the code.
+If the computational budget allows it,
+we would recommend switching to the cFlow model once cVAE is working
+as it provides better guarantees regarding the retention of information from the input data.
 
 \subsection{Additional results}\label{sec:additional-results}
 \paragraph{Detailed results for UCI Adult dataset.}
