--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -90,6 +90,7 @@
     \acro{INN}{Invertible Neural Network}
     \acro{LR}{Logistic Regression}
     \acro{ML}{machine learning}
+    \acro{MLP}{multi-layer perceptron}
     \acro{MMD}{Maximum Mean Discrepancy}
     \acro{NN}{(artificial) neural network}
     \acro{SVM}{Support Vector Machine}
