--- a/paper2/appendix.tex
+++ b/paper2/appendix.tex
@@ -129,20 +129,61 @@ and observe the test-set performance.
 Furthermore, one should check
 whether the spurious variable can be removed with data augmentations alone.
 
-to use the cFlow or cVAE variant of the method.
+If the features of the data are categorical instead of continuous,
+it is best to first produce a continuous representation with an autoencoder.
+This step only has to be done once at the beginning.
+
+The next question is whether to use the cFlow or cVAE variant of the method.
 For initial experiments, we would recommend the cVAE model as it is quicker to train,
 and will lead to shorter feedback cycles when validating the code.
 If the computational budget allows it,
 we would recommend switching to the cFlow model once cVAE is working
 as it provides better guarantees regarding the retention of information from the input data.
 
+For choosing the network architecture,
+the only advice we have is to look at what architecture other people have used for similar data.
+Note, however, that encoder-decoder architectures usually differ in some ways
+from classification architectures,
+due to their different goals: the goal of the former is primarily to compress and disentangle,
+while the latter aims to \emph{discard} information unrelated to the prediction task.
+As such, certain layer types, like pooling layers and batch normalisation,
+are only suitable for classifiers and not encoder-decoders.
+For the \ac{INN} architecture, the most import advice is to keep in mind that
+each individual layer is much less expressive than non-invertible layers,
+and so the number of layers required in \acp{INN} is much higher.
+However, the number also should not be \emph{too high} or the model will overfit.
+It is likely that the architecture needs to be adapted during training.
+See also \secref{sec:optimisation-details} and the code we published alongside this paper
+to get inspiration for architectures.
+
+During training, the user should mostly keep an eye on two variables:
+the reconstruction loss and the degree of invariance of \(\bm{z}_u\) w.r.t.\ \(s\),
+which can either be gleaned from looking at reconstructions of \(\bm{z}_u\)
+or from computing the accuracy of a downstream classifier trained on \(\bm{z}_u\).
+The information inherent in the reconstruction loss can also be obtained
+by looking at full reconstructions of \(\bm{z}\).
+If the reconstruction loss does not go down during training,
+some possible reasons are: the dimension of the representation is too small,
+the reconstruction loss weight is too small
+or the network just needs to be trained for longer.
+If the degree of invariance does not increase during training,
+some possible reasons are:
+the network is not expressive enough (\eg\ not deep enough) to disentangle \(\bm{z}_u\) and \(\bm{z}_b\),
+the adversary is not powerful enough,
+the adversarial loss weight is too small
+or the network just needs to be trained for longer.
+
+For \ac{INN} training, there is the additional complication that it can become non-invertible due to numerical problems (\eg\ division by zero).
+If this happens, the losses will quickly diverge and further training will become pointless.
+See \secref{sec:those-darn-coupling-layers} for some ways of preventing this.
+
 \subsection{Additional results}\label{sec:additional-results}
 \paragraph{Detailed results for UCI Adult dataset.}
 This census data is commonly used to evaluate models focused on algorithmic fairness.
 Following convention, we designate ``gender'' as the $s$ and whether an individual's salary is \$50,000 or greater as $y$.
-We show the performance of our approach in comparison to baseline approaches in fig.~\ref{fig:big-adult-chart}.
+We show the performance of our approach in comparison to baseline approaches in \figref{fig:big-adult-chart}.
 We evaluate the performance of all models for mixing factors ($\eta$) of value $\{0, 0.1, ..., 1\}$. 
-Results shown in fig.~\ref{fig:big-adult-chart} show that whilst our model fails to surpass the baseline models in terms of accuracy for the balanced case (and those close to it), we match or exceed the baseline as $\eta $ moves the dataset to a more imbalanced setting. In terms of fairness metrics,  our approach generally outperforms the baseline models regardless of $\eta$.
+Results shown in \figref{fig:big-adult-chart} show that whilst our model fails to surpass the baseline models in terms of accuracy for the balanced case (and those close to it), we match or exceed the baseline as $\eta $ moves the dataset to a more imbalanced setting. In terms of fairness metrics,  our approach generally outperforms the baseline models regardless of $\eta$.
 
 \begin{figure}[htb]
   \centering
@@ -236,8 +277,8 @@ Ln2L &      0.51 &     0.08 &      0.06 &      0.09 \\
 \paragraph{Additional fairness metrics.}
 In addition to \emph{DP diff}, we report here the result from other fairness measures.
 These results are from the same setup as those reported in the main paper.
-We report the difference in true positive rates (TPR) between the two groups (male and female), which corresponds to a measure of Equality of Opportunity,
-and the difference in true negative rates (TNR) between the two groups.
+We report the difference in \acp{TPR} between the two groups (male and female), which corresponds to a measure of Equality of Opportunity,
+and the difference in \acp{TNR} between the two groups.
 
 \subsection{Optimisation Details}\label{sec:optimisation-details}
 \noindent All our models were trained using the RAdam optimiser \citep{liu2019variance} with learning rates $3\times10^{-4}$ and $1\times10^{-3}$ for the encoder/discriminator pair and classifier respectively. A batch size of 128 was used for all experiments.
@@ -245,13 +286,13 @@ and the difference in true negative rates (TNR) between the two groups.
 We now detail the optimisation settings, including the choice of adversary, specific to each dataset. Details of the cVAE and cFlow architectures can be found in table \ref{tab:vae_architectures} and table \ref{tab:inn_architectures}, respectively.
 
 \paragraph{UCI Adult.} 
-For this dataset our experiment benefited from using null-samples as inputs to the adversary of the cFlow model. Unlike for the image datasets, we found a single adversary to be sufficient. This was realised as a multi-layer perceptron (MLP) with one hidden layer, 256 units wide. The INN performs a bijection of the form $f: \mathbb{R}^n \rightarrow \mathbb{R}^n$. However, the adult dataset is composed of mostly discrete (binary/categorical) features. To achieve good performance, we found it necessary to first pre-process the inputs with a pretrained autoencoder, using its encodings as the input to the cFlow model, as well as to the adversary. The learned representations were evaluated with a logistic regression model from scikit-learn \citep{scikit-learn}, using the standard settings. All baseline models were trained for 200 epochs.
-The Ln2L \citep{kim2019learning} and MLP baselines share the architecture of the cVAE's encoder, only with a classification layer affixed.
+For this dataset our experiment benefited from using null-samples as inputs to the adversary of the cFlow model. Unlike for the image datasets, we found a single adversary to be sufficient. This was realised as a \acf{MLP} with one hidden layer, 256 units wide. The \ac{INN} performs a bijection of the form $f: \mathbb{R}^n \rightarrow \mathbb{R}^n$. However, the adult dataset is composed of mostly discrete (binary/categorical) features. To achieve good performance, we found it necessary to first pre-process the inputs with a pretrained autoencoder, using its encodings as the input to the cFlow model, as well as to the adversary. The learned representations were evaluated with a logistic regression model from scikit-learn \citep{scikit-learn}, using the standard settings. All baseline models were trained for 200 epochs.
+The Ln2L \citep{kim2019learning} and \ac{MLP} baselines share the architecture of the cVAE's encoder, only with a classification layer affixed.
 
 \paragraph{Coloured MNIST.}
 Each level of the architecture used for the downstream classifier and na\"ive baseline alike consists of two convolutional layers, each with kernel size 3 and followed by Batch Norm \citep{ioffe2015batch} and ReLU activation. For the Ln2L baseline, we use an a setup identical to that described in \citet{kim2019learning}. Each level has twice the number of filters in its convolutional layer and half the spatial input dimensions as the last. The original input is downsampled to the point of the output being reduced to a vector, to which a fully-connected classification layer is applied.
 
-To allow for an additional level in the INN (the downsampling operations requiring the number of spatial dimensions to be even), the data was zero-padded to a size of $32\times32$. The cVAE and cFlow models were trained for 50 and 200 epochs respectively, using $\ell_2$ reconstruction loss for the former. The downstream classifier and all baselines were trained for 40 epochs. For both of our models, an ensemble of 5 adversaries was applied to the encodings, with each member taking the form of a fully-connected ResNet, 2 blocks in depth, with SeLU activation \citep{klambauer2017self}. The adversaries were reinitialised independently with probability $0.2$ at the end of each epoch. While the adversaries could equally well take  null-samples as input, as done for the Adult dataset, doing so requires the performing of both forward and inverse passes each iteration, which, for the convolutional INNs of the depths we require for the image datasets, introduces a large computational overhead, while also showing to be the less stable of the two approaches in our preliminary experiments.
+To allow for an additional level in the \ac{INN} (the downsampling operations requiring the number of spatial dimensions to be even), the data was zero-padded to a size of $32\times32$. The cVAE and cFlow models were trained for 50 and 200 epochs respectively, using $\ell_2$ reconstruction loss for the former. The downstream classifier and all baselines were trained for 40 epochs. For both of our models, an ensemble of 5 adversaries was applied to the encodings, with each member taking the form of a fully-connected ResNet, 2 blocks in depth, with SeLU activation \citep{klambauer2017self}. The adversaries were reinitialised independently with probability $0.2$ at the end of each epoch. While the adversaries could equally well take  null-samples as input, as done for the Adult dataset, doing so requires the performing of both forward and inverse passes each iteration, which, for the convolutional \acp{INN} of the depths we require for the image datasets, introduces a large computational overhead, while also showing to be the less stable of the two approaches in our preliminary experiments.
 
 \paragraph{CelebA.} 
 The downstream classifier and na\"ive baseline take the same form as described above for cMNIST, but with an additional level with 32 filters in each of its convolutions at the top of the network. For this dataset we adapt the Ln2L model by simply considering it as an augmentation the na\"ive baseline's objective function, with the entropy loss applied to the output of the final convolutional layer. These models were again trained for 40 epochs, which we found to be sufficient for convergence for the tasks in question. The cVAE and cFlow models were respectively trained for 100 epochs and 30 epochs, using $\ell_1$ reconstruction loss for the former. Compared with cMNIST, the size of the adversarial ensemble was increased to 10, the reinitialisation probability to 0.33, but no changes were made to the architectures of its members.
