--- a/ch/1-introduction.tex
+++ b/ch/1-introduction.tex
@@ -152,7 +152,7 @@ the fairness definitions \ac{EOpp} and \ac{EOdds} can help us evaluate
 how much a classifier is affected by the bias in the training set.
 
 \section{Relations to other fields and clarification of terms}
-\subsection{aka: Isn't this thesis actually about XY instead of fairness?}
+% \subsection{aka: Isn't this thesis actually about XY instead of fairness?}
 The thesis is principally written from the perspective of algorithmic fairness,
 but it touches on other fields as well, like \emph{domain shift} and \emph{causality}.
 Furthermore, the thesis makes use of concepts like \emph{transferable representations}
@@ -194,7 +194,7 @@ As mentioned above, the goal is to ignore the bias in the data
 and learn the true underlying structure that is hidden in the data.
 Often, the most fundamental structure that we can learn is the \emph{causal} structure of the problem of interest.
 For example, if an \acs{ML} model truly understood what makes someone a good employee,
-it would not need to rely on surface characteristics like whether the applicants name sounds foreign.
+it would not need to rely on surface characteristics like whether the applicant's name sounds foreign.
 % Learning such causal models is not yet completely in the realm of what today's \ac{ML} systems can achieve \citep{pearl2019seven},
 % and will likely require a very large amount of data.
 % (The models that perhaps come close to this are methods like unsupervised methods like GPT \citep{radford2018improving,radford2019language,brown2020language} that have been trained on enormous amounts of data.)
