--- a/ch/2-related-work.tex
+++ b/ch/2-related-work.tex
@@ -48,14 +48,17 @@
     [methods for algorithmic fairness
       [data de-biasing
         [dropping\\features]
-        [fair repre-\\sentations
-          [non-parametric
-            [HSIC]
-            [MMD]
-          ]
-          [adversarial\\networks
-            [sample-wise, draw=blue]
-            [set-wise, draw=blue]
+        [additional\\synthetic data]
+        [
+          [fair representations
+            [non-parametric
+              [HSIC]
+              [MMD]
+            ]
+            [adversarial networks
+              [sample-wise, draw=blue]
+              [set-wise, draw=blue]
+            ]
           ]
         ]
       ]
@@ -64,7 +67,7 @@
         [threshold\\shifting]
       ]
       [
-        [change to train-\\ing procedure, line width = 2pt
+        [change to\\training\\procedure, line width = 2pt
           [modified\\sampling]
           [
             [change to loss
