--- a/ch/7-discussion.tex
+++ b/ch/7-discussion.tex
@@ -261,29 +261,30 @@ If one of our machines will affect many of our fellow humans,
 we would not want it to be harmful, right?
 Should we make the machine artificially biased
 so that humans do not need to feel too guilty about their own biases?
-That way lies folly.
-We should always strive to do the best we can.
+I believe this to be folly.
+We should always strive to do the best we can,
+even if this leads to a world in which machines are less biased than humans.
 % ==============
 
 % ======== giving my social perspective viewpoint ========
-As AI models (as opposed to mere \ac{ML} models) become more powerful,
-the biases as presented in this thesis will likely become less relevant.
-However, we can argue that more abstract forms of these problems will still be present.
-Spurious correlations in the training data might become less relevant --
-because a powerful AI can do its own physics experiments
-and thus will be able to figure out the causal structure of our world on its own --
-but what is still relevant is the existence of robust, analysable world models,
-which it is possible to reason on and do planning with.
-The potential trap here is not that the world model is \emph{wrong} per se,
-but that it fails to have a useful structure for other tasks.
-Furthermore, learning about the physical world will not in and of itself be enough to
-become aligned with \emph{human values},
-which is here a catch-all term for
-what morality is or what good is and what wrong is.
-% the things that we want more of, and what bad things are.
-Such questions may appear very different from the issue of label bias
-and objectives like demographic parity,
-but if we take the problem of classical algorithmic fairness to be
-that we want the model to treat our fellow humans right,
-then this is just the generalisation of that.
+% As AI models (as opposed to mere \ac{ML} models) become more powerful,
+% the biases as presented in this thesis will likely become less relevant.
+% However, we can argue that more abstract forms of these problems will still be present.
+% Spurious correlations in the training data might become less relevant --
+% because a powerful AI can do its own physics experiments
+% and thus will be able to figure out the causal structure of our world on its own --
+% but what is still relevant is the existence of robust, analysable world models,
+% which it is possible to reason on and do planning with.
+% The potential trap here is not that the world model is \emph{wrong} per se,
+% but that it fails to have a useful structure for other tasks.
+% Furthermore, learning about the physical world will not in and of itself be enough to
+% become aligned with \emph{human values},
+% which is here a catch-all term for
+% what morality is or what good is and what wrong is.
+% % the things that we want more of, and what bad things are.
+% Such questions may appear very different from the issue of label bias
+% and objectives like demographic parity,
+% but if we take the problem of classical algorithmic fairness to be
+% that we want the model to treat our fellow humans right,
+% then this is just the generalisation of that.
 % ==============
