--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -17,6 +17,8 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgements}
+% Joe's acknowledgements
+% I would like to start by thanking my family for all their constant encouragement: my parents Ged and Marian, my sister Dee, my niece Hannah, and my nephews Alfie and Alex. Thank-you to my wonderful partner Clemy who has been amazing and supportive of me. Thanks to everyone I have shared an office with, and last but not least, thanks to my supervisors Novi and David.
 I would like to thank first and foremost my supervisor Novi.
 He has taught me a whole lot in the time I was his PhD student and always pushed me to challenge myself.
 
