Rewrite last sentence

--- a/ch/7-discussion.tex
+++ b/ch/7-discussion.tex
@@ -258,12 +258,12 @@ Namely, one should avoid giving up and saying,
 The faults of humans has little to do with the question of what we expect of machines.
 % and we should certainly not go out of our way to encode the same biases in our creations.
 If one of our machines will affect many of our fellow humans,
-we would not want it to be harmful, right?
+then I think we would not want it to be harmful.
 Should we make the machine artificially biased
 so that humans do not need to feel too guilty about their own biases?
 I believe this to be folly.
-We should always strive to do the best we can,
-even if this leads to a world in which machines are less biased than humans.
+We should always strive to do the best we can
+and that means making machines as unbiased as possible.
 % ==============
 
 % ======== giving my social perspective viewpoint ========
